# CUDA-NvidiaBlog

./: README.md
1_EasierIntroduction/: Parameters.h  README.md  main.cpp
1_EasierIntroduction/codes/: main.cpp
1_EasierIntroduction/profile/: Easier-Intro.ncu-rep  Grid1152_Block1024.ncu-rep  Grid1152_Block256.ncu-rep
1_EasierIntroduction/utilities/: GpuCommon.h  MaxError.h  RandomVectorGenerator.h  WarmupGPU.cu  WarmupGPU.h
2_GridStrideLoops/: README.md
2_GridStrideLoops/Codes/: Parameters.h  main.cpp
3_GlobalMemoryAccess/: README.md
3_VectorisedMemoryAccess/: README.md
4_OverlapDataTransfer/: README.md
4_VectorisedMemoryAccess/: README.md
5_AnalysisDrivenOptimization/: README.md
5_AnalysisDrivenOptimization/codes/: CMakeLists.txt  Parameters.h  adoConfig.h.in  main.cpp
5_AnalysisDrivenOptimization/codes/solvers/factory/: SolverFactory.h
5_AnalysisDrivenOptimization/codes/solvers/include/: CpuOriginal.h  CpuSolver.h  CpuSolver2.h  CpuSolver3.h  GpuSequential.h  GpuSolver1.h  GpuSolver2.h
5_AnalysisDrivenOptimization/codes/solvers/interface/: ISolver.h
5_AnalysisDrivenOptimization/codes/solvers/src/: CpuOriginal.cpp  CpuSolver.cpp  CpuSolver2.cpp  CpuSolver3.cpp  GpuSequential.cu  GpuSolver1.cu  GpuSolver2.cu
5_AnalysisDrivenOptimization/codes/utilities/include/: WarmupGPU.h
5_AnalysisDrivenOptimization/codes/utilities/src/: CMakeLists.txt  RandomVectorGenerator.cpp
5_UnifiedMemory/: Parameters.h
6_OverlapDataTransfer/: README.md
7_MatrixTranspose/: README.md
EasierIntroduction/: Parameters.h  README.md
(+92 files in other folders)
